# SysyParser

./: .gitignore  CMakeLists.txt  Sysy.g4  SysyLex.g4  a_modified.cpp  compile.sh  generate.sh  grading1.sh  grading2.sh  makefile  replace.sh
answer/: main.cpp
answer/frontend/: AstVisitor.cpp
src/: AstVisitor.cpp  Makefile  main.cpp
src/frontend/: AstRewriter.cpp  AstVisitor.cpp  AstVisitor.h  Display.h  ast.cpp  ast.h  common.h  utils.h
step1/: Makefile  main.cpp  main.h  parser
